Creación de nuevas tablas y arreglo de metodos y atributos de la tablas