@@ -1,38 +1,53 @@
 package wimi.wimilinemarket.service.impl;
 
 import wimi.wimilinemarket.dto.ProductoDTO;
+import wimi.wimilinemarket.entities.Categoria;
 import wimi.wimilinemarket.entities.Producto;
+import wimi.wimilinemarket.repository.CategoriaRepository;
 import wimi.wimilinemarket.repository.ProductoRepository;
 import wimi.wimilinemarket.service.ProductoService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductoServiceImpl implements ProductoService {
 
     private final ProductoRepository productoRepository;
+    private final CategoriaRepository categoriaRepository;
 
     @Autowired
-    public ProductoServiceImpl(ProductoRepository productoRepository) {
+    public ProductoServiceImpl(ProductoRepository productoRepository,
+                               CategoriaRepository categoriaRepository) {
         this.productoRepository = productoRepository;
+        this.categoriaRepository = categoriaRepository;
     }
 
     @Override
     public ProductoDTO createProducto(ProductoDTO productoDTO) {
+        // ✅ Categoría obligatoria
+        if (productoDTO.getCategoriaId() == null) {
+            throw new RuntimeException("La categoría es obligatoria");
+        }
+        Categoria categoria = categoriaRepository.findById(productoDTO.getCategoriaId())
+                .orElseThrow(() -> new RuntimeException("Categoría no encontrada"));
+
         Producto producto = new Producto();
         producto.setProductoId(UUID.randomUUID());
+        producto.setCategoria(categoria); // <-- siempre se setea
         producto.setNombre(productoDTO.getNombre());
         producto.setDescripcion(productoDTO.getDescripcion());
         producto.setDetalles(productoDTO.getDetalles());
         producto.setPrecio(productoDTO.getPrecio());
         producto.setStock(productoDTO.getStock());
         producto.setImagenUrl(productoDTO.getImagenUrl());
-        producto.setActivo(true); // default activo
-        producto.setCreatedAt(java.time.LocalDateTime.now());
+        producto.setActivo(true);
+        producto.setCreatedAt(LocalDateTime.now());
 
         Producto savedProducto = productoRepository.save(producto);
         return mapToDTO(savedProducto);
@@ -46,27 +61,28 @@ public class ProductoServiceImpl implements ProductoService {
     @Override
     public List<ProductoDTO> findAll() {
         List<Producto> productos = productoRepository.findAll();
-        return productos.stream().map(this::mapToDTO).toList();
+        return productos.stream().map(this::mapToDTO).collect(Collectors.toList());
     }
 
     @Override
     public List<ProductoDTO> findAllByCategoria(UUID categoriaId) {
-        // Cambia la llamada al repositorio para usar el nombre correcto del método
         List<Producto> productos = productoRepository.findAllByCategoria_CategoriaId(categoriaId);
-
-        // Mapea la lista de productos a DTOs
-        return productos.stream().map(this::mapToDTO).toList();
+        return productos.stream().map(this::mapToDTO).collect(Collectors.toList());
     }
-
 
     @Override
     public ProductoDTO updateProducto(UUID productoId, ProductoDTO productoDTO) {
-        Optional<Producto> optProducto = productoRepository.findById(productoId);
-        if (optProducto.isEmpty()) {
-            throw new RuntimeException("Producto no encontrado");
-        }
+        Producto producto = productoRepository.findById(productoId)
+                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
 
-        Producto producto = optProducto.get();
+        // ✅ Categoría obligatoria también en update
+        if (productoDTO.getCategoriaId() == null) {
+            throw new RuntimeException("La categoría es obligatoria");
+        }
+        Categoria categoria = categoriaRepository.findById(productoDTO.getCategoriaId())
+                .orElseThrow(() -> new RuntimeException("Categoría no encontrada"));
+        producto.setCategoria(categoria); // <-- siempre se setea
+
         producto.setNombre(productoDTO.getNombre());
         producto.setDescripcion(productoDTO.getDescripcion());
         producto.setDetalles(productoDTO.getDetalles());
@@ -83,10 +99,17 @@ public class ProductoServiceImpl implements ProductoService {
         productoRepository.deleteById(productoId);
     }
 
+    @Override
+    public List<ProductoDTO> findProductosNuevos() {
+        LocalDateTime fechaLimite = LocalDateTime.now().minusHours(24);
+        List<Producto> productosNuevos = productoRepository.findProductosNuevosDesde(fechaLimite);
+        return productosNuevos.stream().map(this::mapToDTO).collect(Collectors.toList());
+    }
+
     private ProductoDTO mapToDTO(Producto producto) {
         return new ProductoDTO(
                 producto.getProductoId(),
-                producto.getCategoria().getCategoriaId(), // Aquí se mapea la categoria_id
+                producto.getCategoria() != null ? producto.getCategoria().getCategoriaId() : null,
                 producto.getNombre(),
                 producto.getDescripcion(),
                 producto.getDetalles(),
